FSI Template Collapse Fix
FSI Template Collapse Fix

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/custom-container.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/custom-container.less
@@ -143,6 +143,7 @@
         }
         .col-6grid {
           flex: 0 0 68%;
+          max-width: 68%;
         }
         .col-3grid--right {
           flex: 0 0 25%;
